:art: fixed whitespace and code formatting

--- a/src/components/views/DestinationSearchPresentation/DestinationSearchPresentation.module.scss
+++ b/src/components/views/DestinationSearchPresentation/DestinationSearchPresentation.module.scss
@@ -23,16 +23,16 @@
 	}
 
 	&::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: 100px;
-    background: linear-gradient(to bottom, transparent, rgb(255, 255, 255));
-    pointer-events: none;
+		content: "";
+		position: absolute;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		height: 100px;
+		background: linear-gradient(to bottom, transparent, rgb(255, 255, 255));
+		pointer-events: none;
 		z-index: 2;
-  }
+	}
 
 	.formContainer {
 		display: grid;
@@ -120,9 +120,11 @@
 				border: solid 2px $mediumYellow;
 				box-shadow: 0 2px 5px rgb(96, 95, 95);
 				border-radius: 50px;
+
 				&:hover {
 					background-color: $darkPink;
 				}
+
 				&:focus {
 					outline: none;
 					box-shadow: 0 0 0 3px $mediumPink;
@@ -158,10 +160,10 @@
 
 .resultContainer {
 	display: grid;
-  grid-template-columns: repeat(3, auto);
-  gap: 20px;
-  justify-content: center;
-  margin-bottom: 100px;
+	grid-template-columns: repeat(3, auto);
+	gap: 20px;
+	justify-content: center;
+	margin-bottom: 100px;
 
 	.resultsTitle {
 		grid-column: 1 / -1;
@@ -174,7 +176,7 @@
 		justify-self: flex-end;
 		display: flex;
 		gap: 5px;
-			
+
 		.sortIcon,
 		.viewToggleIcon {
 			@include button-base;
@@ -187,22 +189,23 @@
 			}
 		}
 	}
-	
 
-  .subText2 {
-    grid-column: 1 / -1;
-    font-size: 1.2rem;
-    justify-self: center;
-  }
 
-  .cardsCarousel {
-    display: contents;
-  }
+	.subText2 {
+		grid-column: 1 / -1;
+		font-size: 1.2rem;
+		justify-self: center;
+	}
+
+	.cardsCarousel {
+		display: contents;
+	}
 
 	a {
-    text-decoration: none;
-    color: inherit;
-  }
+		text-decoration: none;
+		color: inherit;
+		height: 100%;
+	}
 }
 
 @media screen and (max-width: 1024px) {
@@ -220,7 +223,7 @@
 		padding-bottom: 0;
 
 		.formContainer {
-      gap: 50px;
+			gap: 50px;
 			padding-block: 30px;
 			padding-inline: 40px;
 			margin-inline: 20px;
@@ -252,7 +255,7 @@
 	.searchPage {
 		.formContainer {
 			grid-template-columns: 1fr;
-      gap: 40px;
+			gap: 40px;
 			padding-inline: 20px;
 			margin-inline: 20px;
 
@@ -270,8 +273,9 @@
 			font-size: 1.6rem;
 			margin-top: 0px;
 		}
-	
+
 		.sortOptions {
+
 			.sortIcon,
 			.viewToggleIcon {
 				margin-right: 5px;
